<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_information_text"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/regular_margin"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text"/>

        <TextView
            android:id="@+id/name_display_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/name_text_data"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text"/>

        <TextView
            android:id="@+id/email_display_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/email_text_data"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text"/>

        <TextView
            android:id="@+id/phone_display_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/regular_margin"
            android:text="@string/phone_text_data"
            android:textColor="@color/black"
            android:textSize="@dimen/regular_text"/>

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_button_text"
            android:backgroundTint="@color/button_color"
            android:layout_gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>